codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_includes_collaboration_mode_summary.snap
---
source: tui/src/status/tests.rs
assertion_line: 216
expression: sanitized
---
/status

╭───────────────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v0.3.0)                                                 │
│                                                                           │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date             │
│ information on rate limits and credits                                    │
│                                                                           │
│  Model:                gpt-5.1-codex-max (reasoning none, summaries auto) │
│  Directory: [[workspace]]                                                 │
│  Permissions:          Custom (read-only, on-request)                     │
│  Agents.md:            <none>                                             │
│  Collaboration mode:   Design Review                                      │
│  Mode behavior:        repo edits blocked · `update_plan` unavailable ·   │
│                        `request_user_input` available · streams proposed  │
│                        plan                                               │
│  LSP:                  disabled                                           │
│                                                                           │
│  Token usage:          0 total  (0 input + 0 output)                      │
│  Limits:               data not available yet                             │
╰───────────────────────────────────────────────────────────────────────────╯
